--- a/Network Mode.cfg
+++ b/Network Mode.cfg
@@ -505,12 +505,12 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 1
 2000
-5
+11
 0
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-5
+14
 0
 1
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -553,9 +553,9 @@ Begin_Of_Multi_Line_String
   Copyright (c) 2001-2014 Actipro Software LLC.  All rights reserved.
   http://www.actiprosoftware.com
 
---><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Bottom" Size="3360, 289" SelectedToolWindowGuid="784c4fde-b4fc-42d5-a4fa-0af7cba87c83"><ToolWindow Key="{2C007CF7-DF38-4EC1-B451-76B84AF681CC}" Guid="784c4fde-b4fc-42d5-a4fa-0af7cba87c83" DockedSize="201, 285" FloatingSize="423, 189" HasOptions="False" ImageIndex="-1" Text="Write" TitleBarText="Write"><AutoHideStateInfo RootDock="Bottom" /><DockedInsideHostStateInfo RootDock="Bottom" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" State="DockableInsideHost" DockedSize="325, 325" FloatingSize="325, 380"><AutoHideStateInfo RootDock="Left" /><Dock
+--><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Bottom" Size="3360, 298" SelectedToolWindowGuid="784c4fde-b4fc-42d5-a4fa-0af7cba87c83"><ToolWindow Key="{2C007CF7-DF38-4EC1-B451-76B84AF681CC}" Guid="784c4fde-b4fc-42d5-a4fa-0af7cba87c83" DockedSize="201, 294" FloatingSize="423, 189" HasOptions="False" ImageIndex="-1" Text="Write" TitleBarText="Write"><AutoHideStateInfo RootDock="Bottom" /><DockedInsideHostStateInfo RootDock="Bottom" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden><ToolWindow Key="{AFB1C724-5CE6-46B5-9D95-1CAB21180494}" Guid="95cec9ca-9f36-46eb-b629-cc8783fa342b" State="DockableInsideHost" DockedSize="201, 201" FloatingSize="1252, 706"><AutoHideStateInfo RootDock="Top" /><Dock
 kPersistNoLineBreak
-edInsideHostStateInfo RootDock="Left" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow><ToolWindow Key="{AFB1C724-5CE6-46B5-9D95-1CAB21180494}" Guid="95cec9ca-9f36-46eb-b629-cc8783fa342b" State="DockableInsideHost" DockedSize="201, 201" FloatingSize="1252, 706"><AutoHideStateInfo RootDock="Top" /><DockedInsideHostStateInfo RootDock="Top" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></Hidden></LayoutData><CustomData /></ToolWindowLayout>
+edInsideHostStateInfo RootDock="Top" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" State="DockableInsideHost" DockedSize="325, 325" FloatingSize="325, 380"><AutoHideStateInfo RootDock="Left" /><DockedInsideHostStateInfo RootDock="Left" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></Hidden></LayoutData><CustomData /></ToolWindowLayout>
 End_Of_Serialized_Data 3
 End_Of_Object VDesktop 3
 VDesktop 3 Begin_Of_Object
@@ -614,7 +614,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-3360 1199
+3360 1190
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 22 22 953 535
@@ -2517,7 +2517,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 1 0 1 -1 -1 -1 -1 4468 548 7028 1506
+1 1 0 1 -1 -1 -1 -1 6427 916 7683 1624
 Trace
 1
 
@@ -2543,7 +2543,7 @@ END_OF_DOCK_INFO
 1
 1
 1
-0 1 -1 -1 -1 -1 6427 916 7683 1624
+0 2 -32000 -32000 -1 -1 5450 1168 6856 1792
 0
 1
 3360 1199
@@ -2714,7 +2714,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 0
-5
+11
 1
 1
 0
@@ -3077,37 +3077,9 @@ End_Of_Object VLogExportPersister 19
 184
 0
 0
-1
 0
 0
 0
--19
-0
-0
-0
-0
-0
-0
-0
-400
-0
-Tahoma
-0
-1
-0
-0
-0
--19
-0
-0
-0
-34
-0
-0
-0
-400
-0
-Tahoma
 0
 1
 1
@@ -3146,7 +3118,7 @@ VLogCfgData 19 Begin_Of_Object
 0
 3
 0
-5
+11
 1
 1
 0
@@ -3436,7 +3408,7 @@ VLogCfgData 21 Begin_Of_Object
 0
 3
 0
-5
+11
 1
 1
 0
@@ -3603,7 +3575,7 @@ VLogCfgData 16 Begin_Of_Object
 0
 3
 1
-5
+11
 1
 1
 0
@@ -3808,7 +3780,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-3360 1199
+3360 1190
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 44 44 975 557
@@ -3870,7 +3842,7 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 4
 1
-58
+62
 VDAOBus 4 Begin_Of_Object
 1
 1
@@ -3896,7 +3868,7 @@ VOGPersistentDialogData 9 Begin_Of_Object
 1
 0
 -1
-1
+0
 VOGSplitterData 10 Begin_Of_Object
 1
 0.5
@@ -4126,13 +4098,13 @@ Begin_Of_MBSS_Data
 9
 * 394 ~  ~  1 1 0 0 8 1 16 0 30 5 0 0 127 EventType 0 2
 0
-1416 8451048
+1416 8451049
 <VFileName V7 QL> 1 "" 
 <VFileName V7 QL> 1 "Interactive Generator Block" 
 0 2 1
 ::
 ,
-
+4
 4
 .
 0 2 0
@@ -4171,13 +4143,13 @@ Begin_Of_MBSS_Data
 9
 * 452 ~  ~  1 1 0 0 8 2 1 0 15 50 32 0 60 EventType 0 2
 0
-1416 8451048
+1416 8451049
 <VFileName V7 QL> 1 "" 
 <VFileName V7 QL> 1 "Interactive Generator Block" 
 0 2 1
 ::
 ,
-
+4
 4
 .
 0 2 0
@@ -4216,13 +4188,13 @@ Begin_Of_MBSS_Data
 9
 * 372 ~  ~  1 1 0 0 6 3 100 30 2 0 33 EventType 0 2
 0
-1416 8451048
+1416 8451049
 <VFileName V7 QL> 1 "" 
 <VFileName V7 QL> 1 "Interactive Generator Block" 
 0 2 1
 ::
 ,
-
+4
 4
 .
 0 2 0
@@ -4261,13 +4233,13 @@ Begin_Of_MBSS_Data
 9
 * 498 ~  ~  1 1 0 0 8 4 1 100 128 0 10 0 160 EventType 0 2
 0
-1416 8451048
+1416 8451049
 <VFileName V7 QL> 1 "" 
 <VFileName V7 QL> 1 "Interactive Generator Block" 
 0 2 1
 ::
 ,
-
+4
 4
 .
 0 2 0
@@ -4306,13 +4278,13 @@ Begin_Of_MBSS_Data
 9
 * 408 ~  ~  1 1 0 0 5 5 49 0 3 45 EventType 0 2
 0
-1416 8451048
+1416 8451049
 <VFileName V7 QL> 1 "" 
 <VFileName V7 QL> 1 "Interactive Generator Block" 
 0 2 1
 ::
 ,
-
+4
 4
 .
 0 2 0
@@ -4351,13 +4323,13 @@ Begin_Of_MBSS_Data
 9
 * 485 ~  ~  1 1 0 0 4 6 1 2 0 EventType 0 2
 0
-1416 8451048
+1416 8451049
 <VFileName V7 QL> 1 "" 
 <VFileName V7 QL> 1 "Interactive Generator Block" 
 0 2 1
 ::
 ,
-
+4
 4
 .
 0 2 0
@@ -4382,7 +4354,7 @@ End_Of_Object VOnlineGenBlockMsgData 9
 6
 End_Of_Object VOnlineGenBlockCfgData 8
 End_Of_Object VMigratedGenericConfiguration<class_VOnlineGenBlockCfgData> 7
-3
+4
 
 BOF_MBSSDATA
 1 0 0 0 
@@ -4399,7 +4371,7 @@ SS_END_COMMON_INFO
 
 EOF_MBSSDATA
 1
-0 1
+0 0
 1
 1
 VConfigurationBox 7 Begin_Of_Object
@@ -4409,8 +4381,8 @@ VUniqueBox 8 Begin_Of_Object
 VBoxRoot 9 Begin_Of_Object
 1
 3
-1 -1 0 1 0 0 0 0 672 256 2688 1027
-
+1 -1 0 1 -1 -1 -1 -1 5325 843 6390 1726
+IG  ---   Switched off
 1
 
 MDI_DOCK_INFO_END
@@ -4432,10 +4404,10 @@ END_OF_DESKTOP_DATA
 0 1 0 0 0 0 672 256 2688 1027
 6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
-1
+0
 -1
 1
-0 1 -1 -1 -1 -1 5325 843 6390 1726
+0 1 -1 -1 -1 -1 1280 843 2345 1726
 0
 1
 0 0
@@ -4597,7 +4569,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3069089859
+1373546403
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -4634,7 +4606,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 400 1 2882400001 6062 6462 600 1726 2882400002  0 0 0 59421 1 400 1 2882400001 6057 6057 602 602 2882400002  0 0 0 1640028020752 0 1639520425304   5 
+1 0 2 59421 1 400 1 2882400001 6062 6462 600 1726 2882400002  0 0 0 59421 1 400 1 2882400001 6057 6057 602 602 2882400002  0 0 0 0 0 0   5 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -4646,7 +4618,7 @@ CAN
 1
 1
 1
-1640025816912 1 1 0 0 1 1 0 0 0 2000 1 
+2819520433824 1 0 0 0 1 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 2
@@ -4673,7 +4645,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 0 0 1 -1 -1 -1 -1 0 960 3360 1488
+1 0 0 1 -1 -1 -1 -1 0 -381 0 -83
 Write
 1
 
@@ -4693,7 +4665,7 @@ END_OF_DOCK_INFO
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 402 423 595
-6 1 0 0 0 0 0 0 423 189 0 0 1 36756 1904 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 1 0 0 0 1 285 0 59422 1 
+6 1 0 0 0 0 0 0 423 189 0 0 1 36756 1904 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 1 0 0 0 1 294 0 59422 1 
 END_OF_DOCK_INFO
 1
 0
@@ -4777,7 +4749,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -32000 -32000 -1 -1 5450 472 6470 1239
+22 2 3 -1 -1 -1 -1 5450 472 6470 1239
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -4922,7 +4894,7 @@ End_Of_Object VScanBaudrateConfiguration 2
 0
 VPersistentPath 2 Begin_Of_Object
 1
-<VFileName V7 QL> 1 "C:\Users\Public\Documents\Vector\CANoe\10.0 (x64)\Templates\CANoe\CAN_500kBaud_1ch.cpd" 
+<VFileName V7 QL> 1 "Network Mode.cpd" 
 End_Of_Object VPersistentPath 2
 0
 3
@@ -5528,7 +5500,7 @@ TypeRef:4
 4
 Int32
 mTraceViewPanelSize_X
-562
+636
 Int32
 mTraceViewPanelSize_Y
 124
@@ -5537,7 +5509,7 @@ mDataViewPanelSize_X
 450
 Int32
 mDataViewPanelSize_Y
-380
+391
 Boolean
 mIsConfigExpanded
 True
@@ -5552,20 +5524,20 @@ mGraphPanelLeftSize
 14
 Int32
 width
-0
+628
 Int32
 height
-0
+267
 --TextFormatter: End of Object--
 TypeRef:13
 mGraphPanelRightSize
 15
 Int32
 width
-0
+343
 Int32
 height
-0
+375
 --TextFormatter: End of Object--
 Boolean
 mIsGraphPanelRightExpanded
@@ -7764,7 +7736,7 @@ _size
 1
 Int32
 _version
-25
+31
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -8017,7 +7989,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-5
+11
 1
 1
 0
@@ -9343,7 +9315,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 0 0 0 0 672 297 2688 1191
+0 1 0 0 -1 -1 672 297 2688 1191
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -9354,7 +9326,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 672 297 2688 1191
+0 1 0 0 -1 -1 672 297 2688 1191
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -9365,7 +9337,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 672 297 2688 1191
+0 1 0 0 -1 -1 672 297 2688 1191
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -9380,7 +9352,7 @@ END_OF_DESKTOP_DATA_COLLECTION
 0 1
 1
 6
-0 1 0 0 0 0 672 297 2688 1191
+0 1 0 0 -1 -1 672 297 2688 1191
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -9391,7 +9363,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 672 297 2688 1191
+0 1 0 0 -1 -1 672 297 2688 1191
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -9402,7 +9374,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 672 297 2688 1191
+0 1 0 0 -1 -1 672 297 2688 1191
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
